syntax = "proto3";

package proto;
import "customer.proto";
option go_package = "github.com/xuanlt1991/flight-booking/pb";

message CustomerRequest {
    string id = 1;
	string first_name = 2;
    string last_name = 3;
    string address = 4;
    string license = 5;
    string phone_number = 6;
    string email = 7;
    string status = 8;
    string password = 9;
}

message CustomerResponse {
    Customer customer = 1;
}

message ViewCustomerRequest {
    string id = 1;
}

message ChangePasswordRequest {
    string id = 1;
    string oldPassword = 2;
    string newPassword = 3;
}

service CustomerService {
    rpc CreateCustomer (CustomerRequest) returns (CustomerResponse);
    rpc UpdateCustomer (CustomerRequest) returns (CustomerResponse);
    rpc ChangePassword (ChangePasswordRequest) returns (CustomerResponse);
    rpc ViewCustomer (ViewCustomerRequest) returns (CustomerResponse);
}